Added Grunt framework & convert to coffeescript.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="jquery-1.9.1.min.js"></script>
-<script src="cm.js"></script>
+<script src="vendor/jquery-1.9.1.min.js"></script>
+<script src="temp/js/cm.js"></script>
 </head>
 <body>
 
